[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Scripts/Levels/UI.gd" type="Script" id=1]

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 9.0
margin_top = 9.0
margin_right = 89.0
margin_bottom = 23.0
rect_scale = Vector2( 2, 2 )
text = "0"

[node name="Chain" type="Label" parent="."]
margin_left = 9.0
margin_top = 40.0
margin_right = 89.0
margin_bottom = 54.0
rect_scale = Vector2( 4, 4 )
text = "0"

[node name="Multiplier" type="Label" parent="."]
margin_left = 9.0
margin_top = 90.0
margin_right = 89.0
margin_bottom = 104.0
rect_scale = Vector2( 3, 3 )
text = "0"

[node name="Chain_timer_debug" type="Label" parent="."]
margin_left = 665.0
margin_top = 55.0
margin_right = 763.0
margin_bottom = 69.0
text = "Chain: 60"

[node name="Hyper_gauge_debug" type="Label" parent="."]
margin_left = 665.0
margin_top = 70.0
margin_right = 752.0
margin_bottom = 84.0
text = "Gauge: 100"

[node name="Hyper_level_debug" type="Label" parent="."]
margin_left = 665.0
margin_top = 85.0
margin_right = 752.0
margin_bottom = 99.0
text = "Level: 5"

[node name="Hyper_timer_debug" type="Label" parent="."]
margin_left = 665.0
margin_top = 100.0
margin_right = 752.0
margin_bottom = 114.0
text = "Hyper: 600"
